직사각형 별찍기

--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="Baek"/>
 	<classpathentry kind="src" path="CodeUp"/>
+	<classpathentry kind="src" path="Programmers"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
